      adding new files, ``bzr commit`` on a new kernel-like tree drops from 50s
      down to 40s (John Arbash Meinel, #44692)

    * When an entire subtree has been deleted, commit will now report that
      just the top of the subtree has been deleted, rather than reporting
      all the individual items. (Robert Collins)

    * Commit performs one less XML parse. (Robert Collins)

    * ``bzr checkout --lightweight`` now operates on readonly branches as well
      as readwrite branches. This fixes bug #39542 for lightweight checkouts 
      but not for heavyweight ones (the default). (Robert Collins)

  BUG FIXES:

    * Handle boundary="" lines properly to allow access through a Squid proxy.
      (John Arbash Meinel, #57723)

    * revert now removes newly-added directories (Aaron Bentley, #54172)

    * ``bzr upgrade sftp://`` shouldn't fail to upgrade v6 branches if there 
      isn't a working tree. (David Allouche, #40679)

    * Give nicer error messages when a user supplies an invalid --revision
      parameter. (John Arbash Meinel, #55420)

    * Handle when LANG is not recognized by python. Emit a warning, but
      just revert to using 'ascii'. (John Arbash Meinel, #35392)

    * Don't use preexec_fn on win32, as it is not supported by subprocess.
      (John Arbash Meinel)

  INTERNALS:

    * TestCaseInTempDir now creates a separate directory for HOME, rather
      than having HOME set to the same location as the working directory.
      (John Arbash Meinel)

    * run_bzr_subprocess() can take an optional 'env_changes={}' parameter,
      which will update os.environ inside the spawned child. It also can
      take a 'universal_newlines=True', which helps when checking the output
      of the command. (John Arbash Meinel)

    * Refactor SFTP vendors to allow easier re-use when ssh is used. 
      (Andrew Bennetts)

    * Transport.list_dir() and Transport.iter_files_recursive() should always