@@ -50,10 +50,9 @@ class BoundSFTPBranch(TestCaseWithSFTPServer):
         wt_child = b_base.bzrdir.sprout('child').open_workingtree()
         self.sftp_base = Branch.open(self.get_url('base'))
         wt_child.branch.bind(self.sftp_base)
-
+        # check the branch histories are ready for using in tests.
         self.assertEqual(['r@b-1'], b_base.revision_history())
         self.assertEqual(['r@b-1'], wt_child.branch.revision_history())
-
         return b_base, wt_child
 
     def tearDown(self):
@@ -70,6 +69,9 @@ class BoundSFTPBranch(TestCaseWithSFTPServer):
         wt_base.commit('first', rev_id='r@b-1')
 
         b_base = wt_base.branch
+        # manually make a branch we can bind, because the default format
+        # may not be bindable-from, and we want to test the side effects etc
+        # of bondage.
         old_format = BzrDirFormat.get_default_format()
         BzrDirFormat.set_default_format(BzrDirMetaFormat1())
         try:
@@ -82,7 +84,14 @@ class BoundSFTPBranch(TestCaseWithSFTPServer):
         sftp_b_base = Branch.open(self.get_url('base'))
         b_child.bind(sftp_b_base)
         self.assertEqual(sftp_b_base.base, b_child.get_bound_location())
-        # this line is more of a working tree test line, but - what the hey.
+        # the bind must not have given b_child history:
+        self.assertEqual([], b_child.revision_history())
+        # we should be able to update the branch at this point:
+        self.assertEqual(None, b_child.update())
+        # and now there must be history.
+        self.assertEqual(['r@b-1'], b_child.revision_history())
+        # this line is more of a working tree test line, but - what the hey,
+        # it has work to do.
         b_child.bzrdir.open_workingtree().update()
         self.failUnlessExists('child/a')
         self.failUnlessExists('child/b')
@@ -99,7 +108,7 @@ class BoundSFTPBranch(TestCaseWithSFTPServer):
         self.assertEqual(['r@b-1', 'r@c-2'], wt_child.branch.revision_history())
         self.assertEqual(['r@b-1', 'r@c-2'], b_base.revision_history())
 
-    def test_bound_fail(self):
+    def test_bound_commit_fails_when_out_of_date(self):
         # Make sure commit fails if out of date.
         b_base, wt_child = self.create_branches()
 
@@ -127,9 +136,7 @@ class BoundSFTPBranch(TestCaseWithSFTPServer):
     def test_double_binding(self):
         b_base, wt_child = self.create_branches()
 
-        wt_child2 = wt_child.bzrdir.sprout('child2').open_workingtree()
-
-        wt_child2.branch.bind(wt_child.branch)
+        wt_child2 = wt_child.branch.create_checkout('child2')
 
         open('child2/a', 'wb').write('new contents\n')
         self.assertRaises(errors.CommitToDoubleBoundBranch,
@@ -162,8 +169,8 @@ class BoundSFTPBranch(TestCaseWithSFTPServer):
                 wt_child.branch.bind, sftp_b_base)
 
     def test_commit_remote_bound(self):
-        # Make sure it is detected if the current base
-        # suddenly is bound when child goes to commit
+        # Make sure it is detected if the current base is bound during the
+        # objects lifetime, when the child goes to commit.
         b_base, wt_child = self.create_branches()
 
         b_base.bzrdir.sprout('newbase')
@@ -214,29 +221,19 @@ class BoundSFTPBranch(TestCaseWithSFTPServer):
         self.assertRaises(errors.DivergedBranches,
                 wt_child.branch.bind, sftp_b_base)
 
-        # TODO: jam 20051230 merge_inner doesn't set pending merges
-        #       Is this on purpose?
-        #       merge_inner also doesn't fetch any missing revisions
-        #merge_inner(wt_child.branch, sftp_b_base.revision_tree('r@b-2'), 
-        #        wt_child.branch.revision_tree('r@b-1'))
-        # TODO: jam 20051230 merge(..., (None, None), ...) seems to
-        #       cause an infinite loop of some sort. It definitely doesn't
-        #       work, you have to use list notation
-        merge((sftp_b_base.base, 2), [None, None], this_dir=wt_child.branch.base)
-
+        wt_child.merge_from_branch(sftp_b_base)
         self.assertEqual([wt_child_rev, 'r@b-2'], wt_child.get_parent_ids())
         wt_child.commit('merged', rev_id='r@c-3')
 
-        # After a merge, trying to bind again should succeed
-        # by pushing the new change to base
+        # After a merge, trying to bind again should succeed but not push the
+        # new change.
         wt_child.branch.bind(sftp_b_base)
 
+        self.assertEqual(['r@b-1', 'r@b-2'], b_base.revision_history())
         self.assertEqual(['r@b-1', 'r@c-2', 'r@c-3'],
-                b_base.revision_history())
-        self.assertEqual(['r@b-1', 'r@c-2', 'r@c-3'],
-                wt_child.branch.revision_history())
+            wt_child.branch.revision_history())
 
-    def test_bind_parent_ahead(self):
+    def test_bind_parent_ahead_preserves_parent(self):
         b_base, wt_child = self.create_branches()
 
         wt_child.branch.unbind()
@@ -250,7 +247,7 @@ class BoundSFTPBranch(TestCaseWithSFTPServer):
         sftp_b_base = Branch.open(self.get_url('base'))
         wt_child.branch.bind(sftp_b_base)
 
-        self.assertEqual(['r@b-1', 'r@b-2'], wt_child.branch.revision_history())
+        self.assertEqual(['r@b-1'], wt_child.branch.revision_history())
 
         wt_child.branch.unbind()
 
@@ -262,13 +259,12 @@ class BoundSFTPBranch(TestCaseWithSFTPServer):
         self.assertEqual(['r@b-1', 'r@b-2', 'r@b-3', 'r@b-4', 'r@b-5'],
                 b_base.revision_history())
 
-        self.assertEqual(['r@b-1', 'r@b-2'], wt_child.branch.revision_history())
+        self.assertEqual(['r@b-1'], wt_child.branch.revision_history())
 
         wt_child.branch.bind(sftp_b_base)
-        self.assertEqual(['r@b-1', 'r@b-2', 'r@b-3', 'r@b-4', 'r@b-5'],
-                wt_child.branch.revision_history())
+        self.assertEqual(['r@b-1'], wt_child.branch.revision_history())
 
-    def test_bind_child_ahead(self):
+    def test_bind_child_ahead_preserves_child(self):
         b_base, wt_child = self.create_branches()
 
         wt_child.branch.unbind()
@@ -280,7 +276,7 @@ class BoundSFTPBranch(TestCaseWithSFTPServer):
         sftp_b_base = Branch.open(self.get_url('base'))
         wt_child.branch.bind(sftp_b_base)
 
-        self.assertEqual(['r@b-1', 'r@c-2'], b_base.revision_history())
+        self.assertEqual(['r@b-1'], b_base.revision_history())
 
         # Check and make sure it also works if child is ahead multiple
         wt_child.branch.unbind()
@@ -290,11 +286,10 @@ class BoundSFTPBranch(TestCaseWithSFTPServer):
 
         self.assertEqual(['r@b-1', 'r@c-2', 'r@c-3', 'r@c-4', 'r@c-5'],
                 wt_child.branch.revision_history())
-        self.assertEqual(['r@b-1', 'r@c-2'], b_base.revision_history())
+        self.assertEqual(['r@b-1'], b_base.revision_history())
 
         wt_child.branch.bind(sftp_b_base)
-        self.assertEqual(['r@b-1', 'r@c-2', 'r@c-3', 'r@c-4', 'r@c-5'],
-                b_base.revision_history())
+        self.assertEqual(['r@b-1'], b_base.revision_history())
 
     def test_commit_after_merge(self):
         from bzrlib.builtins import merge
@@ -315,12 +310,7 @@ class BoundSFTPBranch(TestCaseWithSFTPServer):
         self.failIf(wt_child.branch.repository.has_revision('r@d-2'))
         self.failIf(b_base.repository.has_revision('r@d-2'))
 
-        # TODO: jam 20051230 merge_inner doesn't set pending merges
-        #       Is this on purpose?
-        #       merge_inner also doesn't fetch any missing revisions
-        #merge_inner(wt_child.branch, b_other.revision_tree('r@d-2'),
-        #        wt_child.branch.revision_tree('r@b-1'))
-        merge((wt_other.branch.base, 2), [None, None], this_dir=wt_child.branch.base)
+        wt_child.merge_from_branch(wt_other.branch)
 
         self.failUnlessExists('child/c')
         self.assertEqual(['r@d-2'], wt_child.get_parent_ids()[1:])
@@ -328,7 +318,7 @@ class BoundSFTPBranch(TestCaseWithSFTPServer):
         self.failIf(b_base.repository.has_revision('r@d-2'))
 
         # Commit should succeed, and cause merged revisions to
-        # be pulled into base
+        # be pushed into base
         wt_child.commit('merge other', rev_id='r@c-2')
         self.assertEqual(['r@b-1', 'r@c-2'], wt_child.branch.revision_history())
         self.assertEqual(['r@b-1', 'r@c-2'], b_base.revision_history())
@@ -339,7 +329,9 @@ class BoundSFTPBranch(TestCaseWithSFTPServer):
 
         open('a', 'ab').write('child adds some text\n')
 
+        # this deletes the branch from memory
         del b_base
+        # and this moves it out of the way on disk
         os.rename('base', 'hidden_base')
 
         self.assertRaises(errors.BoundBranchConnectionFailure,
@@ -356,7 +348,9 @@ class BoundSFTPBranch(TestCaseWithSFTPServer):
         self.assertEqual(['r@b-1'], wt_child.branch.revision_history())
         self.assertEqual(['r@b-1', 'r@d-2'], wt_other.branch.revision_history())
 
+        # this deletes the branch from memory
         del b_base
+        # and this moves it out of the way on disk
         os.rename('base', 'hidden_base')
 
         self.assertRaises(errors.BoundBranchConnectionFailure,
